First part OC cours & Project etap 1.1 finish

--- a/Cours/Passez_au_Full_Stack_avec_Node.js_Express_et_MongoDB/backend/package.json
+++ b/Cours/Passez_au_Full_Stack_avec_Node.js_Express_et_MongoDB/backend/package.json
@@ -1,8 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "cours backend OC",
+  "description": "OC_Projet07: Développez le back-end d'un site de notation de livres",
   "main": "server.js",
   "author": "flourdau",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.3.0"
+  }
 }
