--- a/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/package.json
+++ b/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/package.json
@@ -2,10 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "cours backend OC",
-  "main": "server.js",
+  "main": "public/server.js",
   "author": "flourdau",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.3.0"
   }
 }
