--- a/Cours/Passez_au_Full_Stack_avec_Node.js_Express_et_MongoDB/backend/package.json
+++ b/Cours/Passez_au_Full_Stack_avec_Node.js_Express_et_MongoDB/backend/package.json
@@ -6,7 +6,10 @@
   "author": "flourdau",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.3.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.0",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
