--- a/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/package.json
+++ b/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/package.json
@@ -2,11 +2,14 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "cours backend OC",
-  "main": "public/server.js",
+  "main": "server.js",
   "author": "flourdau",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^7.3.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.0",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
