--- a/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/package.json
+++ b/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
