--- a/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/package.json
+++ b/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/package.json
@@ -11,6 +11,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
-    "mongoose-unique-validator": "^4.0.0"
+    "mongoose-unique-validator": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.1",
+    "sharp-multer": "^0.2.5"
   }
 }
