Up .env.dist & clean

--- a/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/.env.dist
+++ b/Projet/Développez_le_back-end d_un_site_de_notation_de_livres/backend/.env.dist
@@ -1,5 +1,3 @@
 PORT = 4000
-TOKEN = 
-DB_USER = 
-DB_PASS = 
-DB_CLUSTER = 
+TOKEN = "YOUR_JSON_WEB_TOKEN"
+DB_LINK = "mongodb+srv://<USER>:<PASSWORD>@cluster0.k8bbvxw.mongodb.net/?retryWrites=true&w=majority"
